src/test/ui/range/range-inclusive-pattern-precedence.stderr
error: the range pattern here has ambiguous interpretation
  --> $DIR/range-inclusive-pattern-precedence.rs:15:10
   |
LL |         &10..=15 => {}
   |          ^^^^^^^ help: add parentheses to clarify the precedence: `(10 ..=15)`

warning: `...` range patterns are deprecated
  --> $DIR/range-inclusive-pattern-precedence.rs:11:9
   |
LL |         &0...9 => {}
   |         ^^^^^^ help: use `..=` for an inclusive range: `&(0..=9)`
   |
note: the lint level is defined here
  --> $DIR/range-inclusive-pattern-precedence.rs:7:9
   |
LL | #![warn(ellipsis_inclusive_range_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in the 2021 edition!
   = note: for more information, see issue #80165 <https://github.com/rust-lang/rust/issues/80165>

error: aborting due to previous error; 1 warning emitted

